# SANDLab

./: .gitignore  README.md
Arduino/BLE/BLE_Client/: BLE_Client.ino
Arduino/Data_Reader/: Data_Reader.ino
Arduino/ExampleCode/NTP_Client/: NTP_Client.ino
Arduino/NTP_Master/: NTP_Master.ino
Arduino/clock_syncs/NTP_Master/: NTP_Master.ino
Arduino/clock_syncs/NTP_Slave/: NTP_Slave.ino
Arduino/debug_tools/ISR_testing/: ISR_testing.ino
Arduino/debug_tools/signal_acknowledge_tool/: signal_acknowledge_tool.ino
Arduino/example_code/I2C_Scanner/: I2C_Scanner.ino
Arduino/example_code/INA_219_Reader/: INA_219_Reader.ino
CSV Data/BLE Transmision Power Data/: scope_10.csv  scope_13.csv  scope_14.csv  scope_16.csv  scope_3.csv  scope_6.csv  scope_8.csv
csv_data/BLE Transmision Power Data/: scope_0.csv  scope_12.csv  scope_15.csv  scope_18.csv  scope_4.csv
csv_data/BLE_power_data/: scope_1 3 BLE Advertisement signals..csv  scope_11.csv  scope_17.csv  scope_2 Startup to Advertisement signals.csv  scope_5.csv  scope_7.csv  scope_9.csv
esp_idf/: data_split.py
esp_idf/ml_models/: README.md
esp_idf/ml_models/cifar_cnn_projects/cifar_deployment_2/main/: CMakeLists.txt
network_code/middle2/: CMakeLists.txt
network_code/project1/: CMakeLists.txt  partitions_custom.csv
network_code/project2/: CMakeLists.txt
network_code/project3/: CMakeLists.txt
network_code/project4/: CMakeLists.txt
network_code/project5/: CMakeLists.txt  partitions_custom.csv
network_code/tail/: CMakeLists.txt
tcp_client/main/: tcp_client_v4.c
tcp_server/main/: tcp_server.c
(+82 files in other folders)
